--- a/package.json
+++ b/package.json
@@ -4,7 +4,35 @@
     "workspaces": [
         "packages/*"
     ],
+    "scripts": {
+        "website-dev": "webpack serve --config ./website/webpack.config.js"
+    },
     "devDependencies": {
-        "lerna": "^4.0.0"
+        "@babel/core": "^7.16.0",
+        "@babel/plugin-proposal-class-properties": "^7.16.0",
+        "@babel/plugin-transform-runtime": "^7.16.0",
+        "@babel/preset-env": "^7.16.0",
+        "@babel/preset-typescript": "^7.16.0",
+        "@vue/compiler-sfc": "^3.2.22",
+        "babel-loader": "^8.2.3",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "babel-preset-typescript-vue3": "^2.0.16",
+        "css-loader": "^6.5.1",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "lerna": "^4.0.0",
+        "sass": "^1.43.4",
+        "sass-loader": "^12.3.0",
+        "style-loader": "^3.3.1",
+        "url-loader": "^4.1.1",
+        "vue-loader": "^16.8.3",
+        "webpack": "^5.64.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.5.0"
+    },
+    "dependencies": {
+        "@babel/runtime-corejs3": "^7.16.3",
+        "typescript": "^4.4.4",
+        "vue": "^3.2.22"
     }
 }
