--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
         "@babel/plugin-transform-runtime": "^7.16.0",
         "@babel/preset-env": "^7.16.0",
         "@babel/preset-typescript": "^7.16.0",
+        "@babel/runtime-corejs3": "^7.16.3",
         "@vue/compiler-sfc": "^3.2.22",
         "babel-loader": "^8.2.3",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-preset-typescript-vue3": "^2.0.16",
         "css-loader": "^6.5.1",
         "file-loader": "^6.2.0",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^8.0.0",
+        "gulp-cssmin": "^0.2.0",
+        "gulp-dart-sass": "^1.0.2",
+        "gulp-rename": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
         "lerna": "^4.0.0",
         "sass": "^1.43.4",
@@ -31,7 +37,6 @@
         "webpack-dev-server": "^4.5.0"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.16.3",
         "typescript": "^4.4.4",
         "vue": "^3.2.22"
     }
