--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
         "packages/*"
     ],
     "scripts": {
-        "website-dev": "webpack serve --config ./website/webpack.config.js"
+        "website-dev": "webpack serve --config website/webpack.config.js",
+        "build:theme": "gulp build --gulpfile packages/theme-chalk/gulpfile.js",
+        "build": "webpack --config build/webpack.config.js",
+        "build:esm-bundle": "rollup -c build/rollup.config.bundle.js",
+        "build:esm": "rollup -c build/rollup.config.js"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
@@ -14,6 +18,7 @@
         "@babel/preset-env": "^7.16.0",
         "@babel/preset-typescript": "^7.16.0",
         "@babel/runtime-corejs3": "^7.16.3",
+        "@rollup/plugin-node-resolve": "^13.0.6",
         "@vue/compiler-sfc": "^3.2.22",
         "babel-loader": "^8.2.3",
         "babel-plugin-module-resolver": "^4.1.0",
@@ -27,6 +32,9 @@
         "gulp-rename": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
         "lerna": "^4.0.0",
+        "rollup": "^2.60.0",
+        "rollup-plugin-typescript2": "^0.30.0",
+        "rollup-plugin-vue": "^6.0.0",
         "sass": "^1.43.4",
         "sass-loader": "^12.3.0",
         "style-loader": "^3.3.1",
